🔨 :hammer: [Fix] Resize login on mobile

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -11,6 +11,11 @@
     width: 70%;
     height: 70%;
     display: flex;
+    justify-content: space-between;
+}
+
+.loginLeft {
+    margin-right: 20px;
 }
 
 .loginLeft, .loginRight {
@@ -18,6 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 500px;
 }
 
 .loginLogo {
@@ -62,6 +68,7 @@
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .loginButton:focus {
@@ -88,4 +95,39 @@
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
+}
+
+
+@media (max-width: 1100px) {
+    .loginWrapper {
+        flex-direction: column;
+        max-width: 500px;
+    }
+    
+    .loginLeft {
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 550px) {
+    .loginWrapper {
+        width: 100%;
+        padding: 20px;
+    }
+    
+    .loginLeft {
+        margin-bottom: 20px;
+    }
+
+    .loginLogo {
+        font-size: 44px;
+    }
+
+    .loginDesc {
+        font-size: 20px;
+    }
+
+    .loginButton, .loginRegisterButton {
+        font-size: 18px;
+    }
 }
